<?xml version="1.0"?>
<package>
  <name>common_driver</name>
  <version>0.1.57</version>
  <description>This package is Common interface for RosJava.</description>

  <maintainer email="mick.gaillard@gmail.com">Mickaël Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickaël Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_core</build_depend>
  <build_depend>rosbuilding_msgs_java</build_depend>
  <build_depend>media_msgs_java</build_depend>
  <build_depend>heater_msgs_java</build_depend>
  <build_depend>rosbuilding_msgs_java</build_depend>
  <build_depend>rosjava_dynamic_reconfigure</build_depend>
  <build_depend>network_zeroconf</build_depend>
  <build_depend>rosjava_build_tools</build_depend>

  <run_depend>rosjava_core</run_depend>
  <run_depend>rosbuilding_msgs_java</run_depend>
  <run_depend>media_msgs_java</run_depend>
  <run_depend>heater_msgs_java</run_depend>
  <run_depend>rosjava_dynamic_reconfigure</run_depend>
  <run_depend>network_zeroconf</run_depend>

</package>
