<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>smarthome_common_driver</name>
  <version>2.0.0</version>
  <description>This package is Common interface for RosJava.</description>

  <maintainer email="mick.gaillard@gmail.com">Mickael Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickael Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jars</buildtool_depend>
  <buildtool_depend>ament_build_type_gradle</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>rosidl_generator_java</buildtool_depend>

  <build_depend>rcljava</build_depend>
  <build_depend>rosidl_generator_java</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>smarthome_comm_msgs</build_depend>
  <build_depend>smarthome_media_msgs</build_depend>
  <build_depend>smarthome_heater_msgs</build_depend>
  <build_depend>smarthome_light_msgs</build_depend>

  <!-- exec_depend>rosidl_generator_java</exec_depend-->
  <exec_depend>rcljava</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>smarthome_comm_msgs</exec_depend>
  <exec_depend>smarthome_media_msgs</exec_depend>
  <exec_depend>smarthome_heater_msgs</exec_depend>
  <exec_depend>smarthome_light_msgs</exec_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_gradle</build_type>
  </export>

</package>
